--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70,6 +70,24 @@ html {
     scroll-behavior: smooth;
 }
 
+html::-webkit-scrollbar {
+    width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+    background-color: white;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: #bebebe;
+    border-radius: 25px;
+}
+
+html ::selection {
+    color: black;
+    background: #bebebe;
+}
+
 @media (prefers-reduced-motion: no-preference) {
     :root {
         scroll-behavior: smooth;
