--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12847,3 +12847,19 @@ p {
     height: 516px;
     overflow-y: auto;
 }
+
+/************* TextArea *************/
+.single-textarea {
+    display: block;
+    width: 100%;
+    /* line-height: 1px; */
+    /* border: none; */
+    outline: none;
+    background: #fff;
+    height: 100px;
+    resize: none;
+}
+
+.single-textarea:focus {
+    outline: none;
+}
